修改预约日期

--- a/src/main/webapp/html/room-detail.html
+++ b/src/main/webapp/html/room-detail.html
@@ -125,6 +125,7 @@
 		
 		<div class="footer-look clearfloat" id="footer">
 			<a href="#loginmodal" id="modaltrigger">我要看房</a>
+			<a href="#sign" id="sign">立即签约</a>
 		</div>
 		
 		
