--- a/src/main/webapp/html/rent-entire.html
+++ b/src/main/webapp/html/rent-entire.html
@@ -29,8 +29,8 @@
 			<div class="menu-list clearfloat am-sharetwo">
 				<ul class="yiji" id="oe_menu">
 					<li>
-						<a href="#" class="inactive">区域<i></i></a>
-						<ul style="display: none">
+						<a id="condition-area-href" href="#" class="inactive">区域<i></i></a>
+						<ul id="condition-area" style="display: none">
 							<li><a href="#">包河区</a></li> 
 							<li><a href="#">庐阳区</a></li> 
 							<li><a href="#">蜀山区</a></li> 
@@ -40,8 +40,8 @@
 						</ul>
 					</li>
 					<li>
-						<a href="#" class="inactive">租金<i></i></a>
-						<ul style="display: none">
+						<a id="condition-price-href" href="#" class="inactive">租金<i></i></a>
+						<ul id="condition-price" style="display: none">
 							<li><a href="#">100-200元</a></li> 
 							<li><a href="#">300-500元</a></li> 
 							<li><a href="#">600-800元</a></li> 
@@ -49,8 +49,8 @@
 						</ul>
 					</li>
 					<li>
-						<a href="#" class="inactive">排序<i></i></a>
-						<ul style="display: none">
+						<a id="condition-sort-href" href="#" class="inactive">排序<i></i></a>
+						<ul id="condition-sort" style="display: none">
 							<li><a href="#">价格</a></li> 
 							<li><a href="#">区域</a></li> 
 						</ul>
