--- a/src/main/webapp/html/rent-life.html
+++ b/src/main/webapp/html/rent-life.html
@@ -58,7 +58,7 @@
 		    </div>
 			<div class="recom clearfloat">
 		    	<div class="recom-tit clearfloat box-s">
-		    		<p>生活缴费明细<a href="#"><span class="fr">更多</span></a></p>
+		    		<p>生活缴费明细<a href="rent-life-paydetail.html"><span class="fr">更多</span></a></p>
 		    	</div>
 		    	<div class="content clearfloat box-s noticetwo">
 					<div id="payment" class="tab-pal">
