--- a/src/main/webapp/html/rent-life-paydetail.html
+++ b/src/main/webapp/html/rent-life-paydetail.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>留言墙</title>
-    <meta name="keywords" content="">
+	<title>缴费明细</title>
+	<meta name="words" content="">
     <meta name="description" content="">
     <script src="../js/base/rem.js"></script> 
     <script src="../js/base/jquery.min.js" type="text/javascript"></script>
@@ -16,31 +16,23 @@
     <link rel="stylesheet" type="text/css" href="../style/css/loading.css"/>
     <link rel="stylesheet" type="text/css" href="../js/slick/slick.css"/>
 	<script type="text/javascript" src="../js/common/util.js"></script>
-	<script type="text/javascript" src="../js/rent-life-message.js"></script>
+	<script type="text/javascript" src="../js/rent-life-paydetail.js" ></script>
 </head>
 	<body>
 		<div class="headertwo clearfloat" id="header">
 			<a href="javascript:history.go(-1)" class="fl box-s"><i class="iconfont icon-arrow-l fl"></i></a>
-			<p class="fl">留言墙</p>
+			<p class="fl">缴费明细</p>
 		</div>
-
+		
 		<div class="clearfloat" id="main">
 			<div class="recom clearfloat ">
-		    	<div id="message" class="content clearfloat box-s">
-		    		
+		    	<div class="content clearfloat box-s noticetwo">
+					<div id="paydetail" class="tab-pal">
+
+					</div>
 		    	</div>
 		    </div>
 		</div>
-		<footer class="page-footer fixed-footer " id="footer">
-			<div class="modify clearfloat">
-				<ul>
-					<li class="clearfloat">
-						<input type="text" name="message" id="message-input" value="" placeholder="请输入" class="syzma message-input fl" />
-						<button class="message-btn clearfloat" onclick="sendMessage()">发送</button>
-					</li>
-				</ul>
-			</div>		
-		</footer>
 	</body>
 	<script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
 	<script src="../js/base/fastclick.js"></script>
