--- a/src/main/webapp/html/rent-life-task.html
+++ b/src/main/webapp/html/rent-life-task.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="../style/css/loading.css"/>
     <link rel="stylesheet" type="text/css" href="../js/slick/slick.css"/>
 	<script type="text/javascript" src="../js/common/util.js"></script>
+	<script type="text/javascript" src="../js/common/param-util.js"></script>
 	<script type="text/javascript" src="../js/rent-life-task.js" ></script>
 </head>
 	<body>
@@ -29,8 +30,8 @@
 				<div class="notice">
 					<div class="tab-hd clearfloat">
 						<ul class="tab-nav clearfloat">
-							<li class="tab-three"><a href="javascript:getDatasList(1);">待执行</a></li>
-							<li class="tab-three"><a href="javascript:getDatasList(2);">已完成</a></li>
+							<li class="tab-three"><a href="javascript:getTaskDatasList(1);">待执行</a></li>
+							<li class="tab-three"><a href="javascript:getTaskDatasList(2);">已完成</a></li>
 						</ul>
 					</div>
 					<div class="tab-bd clearfloat">
