--- a/src/main/webapp/html/rent-life-task.html
+++ b/src/main/webapp/html/rent-life-task.html
@@ -45,6 +45,9 @@
 						<div id="task-all" class="tab-pal">
 
 						</div>
+						<div class="footer-look footer-load clearfloat" id="load-more" >
+							<a class="full" href="javascript:void();">加载更多</a>
+						</div>
 					</div>
 				</div>
 			</div>
