--- a/src/main/webapp/html/rent-life-paydetail.html
+++ b/src/main/webapp/html/rent-life-paydetail.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="../style/css/loading.css"/>
     <link rel="stylesheet" type="text/css" href="../js/slick/slick.css"/>
 	<script type="text/javascript" src="../js/common/util.js"></script>
+	<script type="text/javascript" src="../js/common/load-more.js"></script>
 	<script type="text/javascript" src="../js/rent-life-paydetail.js" ></script>
 </head>
 	<body>
@@ -29,6 +30,9 @@
 		    	<div class="content clearfloat box-s noticetwo">
 					<div id="paydetail" class="tab-pal">
 
+					</div>
+					<div class="footer-look footer-load clearfloat" id="load-more" >
+						<a class="full" href="javascript:loadMore();">加载更多</a>
 					</div>
 		    	</div>
 		    </div>
