--- a/src/main/webapp/html/rent-submit-order.html
+++ b/src/main/webapp/html/rent-submit-order.html
@@ -114,7 +114,7 @@
 						<i class="iconfont icon-qianhetong fr chapter"></i>						
 					</li>
 				</ul>
-				<a href="order.html" class="pay-btn clearfloat">
+				<a href="rent-confirm-order.html" class="pay-btn clearfloat">
 					下一步
 				</a>
 			</div>
