房屋地址信息

--- a/src/main/webapp/html/rent-submit-order.html
+++ b/src/main/webapp/html/rent-submit-order.html
@@ -50,11 +50,11 @@
 					</li>
 					<li>
 						<span>2</span>
-						<p>订单确认</p>
+						<p>支付订单</p>
 					</li>
 					<li>
 						<span>3</span>
-						<p>租客付款</p>
+						<p>付款成功</p>
 					</li>
 					<li>
 						<span>4</span>
@@ -114,7 +114,7 @@
 						<i class="iconfont icon-qianhetong fr chapter"></i>						
 					</li>
 				</ul>
-				<a href="rent-confirm-order.html" class="pay-btn clearfloat">
+				<a href="javascript:submitOrderDatasList()" class="pay-btn clearfloat">
 					下一步
 				</a>
 			</div>
