租房订单提交

--- a/src/main/webapp/html/rent-entire.html
+++ b/src/main/webapp/html/rent-entire.html
@@ -29,6 +29,15 @@
 			<div class="menu-list clearfloat am-sharetwo">
 				<ul class="yiji" id="oe_menu">
 					<li>
+						<a id="rent-type-href" href="#" class="inactive">类型<i></i></a>
+						<ul id="rent-type" style="display: none">
+							<li><a href="#">不限</a></li>
+							<li><a href="#">合租</a></li>
+							<li><a href="#">整租</a></li>
+							<li><a href="#">短租</a></li>
+						</ul>
+					</li>
+					<li>
 						<a id="condition-area-href" href="#" class="inactive">区域<i></i></a>
 						<ul id="condition-area" style="display: none">
 							<li><a href="#">包河区</a></li> 
@@ -36,7 +45,20 @@
 							<li><a href="#">蜀山区</a></li> 
 							<li><a href="#">瑶海区</a></li> 
 							<li><a href="#">高新区</a></li> 
-							<li><a href="#">新站区</a></li> 
+							<li><a href="#">新站区</a></li>
+							<li><a href="#">朝阳区</a>
+								<ul id="condition-area-second" class="second-ul">
+									<li><a href="#">瑶海区</a>
+										<ul id="condition-area-third" class="third-ul">
+											<li><a href="#">瑶海区</a></li>
+											<li><a href="#">高新区</a></li>
+											<li><a href="#">新站区</a></li>
+										</ul>
+									</li>
+									<li><a href="#">高新区</a></li>
+									<li><a href="#">新站区</a></li>
+								</ul>
+							</li>
 						</ul>
 					</li>
 					<li>
