--- a/src/main/webapp/html/rent-submit-order.html
+++ b/src/main/webapp/html/rent-submit-order.html
@@ -15,8 +15,12 @@
     <link rel="stylesheet" type="text/css" href="../style/css/loaders.min.css"/>
     <link rel="stylesheet" type="text/css" href="../style/css/loading.css"/>
     <link rel="stylesheet" type="text/css" href="../js/slick/slick.css"/>
+	<link rel="stylesheet" href="../style/css/mui.min1.css">
+	<link rel="stylesheet" type="text/css" href="../style/css/mui.picker.min.css" />
+	<link href="../style/css/mui.picker.css" rel="stylesheet" />
+	<link href="../style/css/mui.poppicker.css" rel="stylesheet" />
+
 	<script type="text/javascript" src="../js/common/util.js"></script>
-	<script type="text/javascript" src="../js/rent-submit-order.js" ></script>
 	<script type="text/javascript">
 		$(window).load(function(){
 			$(".loading").addClass("loader-chanage")
@@ -78,6 +82,11 @@
 						<p class="tit fl">房屋住址</p>
 						<p class="xinxi fr" id="rent-address"></p>
 					</li>
+					<li class="box-s clearfloat" id='showUserPicker'>
+						<p class="tit fl">租住类型</p>
+						<input type="text" name="rentType" id="rent-type" value="年租" readonly="readonly" placeholder="年租" class="fl day" />
+						<i class="iconfont icon-arrowright fl"></i>
+					</li>
 					<li class="box-s clearfloat">
 						<p class="tit fl">合同开始日</p>
 						<p class="xinxi fr" name="startTime" id="start-time"></p>
@@ -90,6 +99,11 @@
 						<p class="tit fl">租房押金</p>
 						<p class="xinxi price fr" name="mortgage" id="mortgage"></p>
 					</li>
+					<!--<li class="box-s clearfloat" id='showUserPicker'>
+						<p class="tit fl">租房类型</p>
+						<input type="text" name="" id="" value="" readonly="readonly" placeholder="整租" class="fl day" />
+						<i class="iconfont icon-arrowright fl"></i>
+					</li>-->
 					<li class="box-s clearfloat">
 						<p class="tit fl">每月租金</p>
 						<p class="xinxi price fr" name="price" id="price"></p>
@@ -112,5 +126,13 @@
 	<script type="text/javascript" src="../js/base/jquery-1.8.3.min.js" ></script>
 	<script src="../js/base/fastclick.js"></script>
 	<script src="../js/base/mui.min.js"></script>
+
+	<script type="text/javascript" src="../js/slick/slick.min.js" ></script>
+	<script type="text/javascript" src="../js/base/jquery.leanModal.min.js"></script>
+	<script type="text/javascript" src="../js/base/tchuang.js" ></script>
+	<script src="../js/base/mui.picker.min.js"></script>
+	]<script src="../js/base/mui.picker.js"></script>
+	<script src="../js/base/mui.poppicker.js"></script>
 	<script type="text/javascript" src="../js/base/hmt.js" ></script>
+	<script type="text/javascript" src="../js/rent-submit-order.js" ></script>
 </html>
