js添加时间工具

--- a/src/main/webapp/html/rent-submit-order.html
+++ b/src/main/webapp/html/rent-submit-order.html
@@ -21,6 +21,7 @@
 	<link href="../style/css/mui.poppicker.css" rel="stylesheet" />
 
 	<script type="text/javascript" src="../js/common/util.js"></script>
+	<script type="text/javascript" src="../js/common/time-util.js"></script>
 	<script type="text/javascript">
 		$(window).load(function(){
 			$(".loading").addClass("loader-chanage")
@@ -131,7 +132,7 @@
 	<script type="text/javascript" src="../js/base/jquery.leanModal.min.js"></script>
 	<script type="text/javascript" src="../js/base/tchuang.js" ></script>
 	<script src="../js/base/mui.picker.min.js"></script>
-	]<script src="../js/base/mui.picker.js"></script>
+	<script src="../js/base/mui.picker.js"></script>
 	<script src="../js/base/mui.poppicker.js"></script>
 	<script type="text/javascript" src="../js/base/hmt.js" ></script>
 	<script type="text/javascript" src="../js/rent-submit-order.js" ></script>
