--- a/src/main/webapp/html/rent-confirm-order.html
+++ b/src/main/webapp/html/rent-confirm-order.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" type="text/css" href="../style/css/mui.min1.css"/>
 	<link href="../style/css/mui.picker.css" rel="stylesheet" />
 	<link href="../style/css/mui.poppicker.css" rel="stylesheet" />
+
+	<script type="text/javascript" src="../js/common/util.js"></script>
+	<script type="text/javascript" src="../js/common/time-util.js"></script>
 	<script type="text/javascript">
 		$(window).load(function(){
 			$(".loading").addClass("loader-chanage")
@@ -42,7 +45,7 @@
 	<body>
 		<div class="headertwo clearfloat" id="header">
 			<a href="javascript:history.go(-1)" class="fl box-s"><i class="iconfont icon-arrow-l fl"></i></a>
-			<p class="fl">订单确认</p>
+			<p class="fl">订单支付</p>
 		</div>
 		
 		<div class="order clearfloat" id="main">
@@ -54,7 +57,7 @@
 					</li>
 					<li class="cur">
 						<span>2</span>
-						<p>订单确认</p>
+						<p>订单支付</p>
 					</li>
 					<li>
 						<span>3</span>
@@ -124,7 +127,7 @@
 		
 		<div class="order-footer clearfloat" id="footer">
 			<p class="price fl box-s">应付金额：<span>¥7800</span></p>
-			<a href="payment.html" class="fr">下一步</a>
+			<a href="payment.html" class="fr">确认并支付</a>
 		</div>
 		
 	</body>
@@ -134,57 +137,5 @@
 	<script type="text/javascript" src="../js/base/hmt.js" ></script>
 	<script src="../js/base/mui.picker.js"></script>
 	<script src="../js/base/mui.poppicker.js"></script>
-	<script src="../js/base/city.data.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../js/base/city.data-3.js" type="text/javascript" charset="utf-8"></script>
-	<script>
-			(function($, doc) {
-				$.init();
-				$.ready(function() {
-					//普通示例
-					var userPicker = new $.PopPicker();
-					userPicker.setData([{
-						value: '',
-						text: '10元优惠券'
-					}, {
-						value: '',
-						text: '20元优惠券'
-					}, {
-						value: '',
-						text: '50元优惠券'
-					}, {
-						value: '',
-						text: '30元优惠券'
-					}, {
-						value: '',
-						text: '70元优惠券'
-					}, {
-						value: '',
-						text: '100元优惠券'
-					}, {
-						value: '',
-						text: '20元优惠券'
-					}, {
-						value: '',
-						text: '15元优惠券'
-					}, {
-						value: '',
-						text: '50元优惠券'
-					}, {
-						value: '', 
-						text: '80元优惠券'
-					}]);
-					var showUserPickerButton = doc.getElementById('showUserPicker');
-					var userResult = doc.getElementById('userResult');
-					showUserPickerButton.addEventListener('tap', function(event) {
-						userPicker.show(function(items) {
-							userResult.innerText = JSON.stringify(items[0]);
-							//返回 false 可以阻止选择框的关闭
-							//return false;
-						});
-					}, false);
-				
-				
-				});
-			})(mui, document);
-		</script>
+	<script type="text/javascript" src="../js/rent-confirm-order.js" ></script>
 </html>
