支付订单页面

--- a/src/main/webapp/html/rent-confirm-order.html
+++ b/src/main/webapp/html/rent-confirm-order.html
@@ -85,24 +85,24 @@
 			<div class="land-ctent clearfloat pay-bottom order-bottom">
 				<ul>
 					<li class="box-s clearfloat">
-						<p class="tit fl">租房押金</p>
-						<p class="xinxi fr">2500元</p>
+						<p class="tit fl">1期房租</p>
+						<p class="xinxi fr">¥2500</p>
 					</li>
 					<li class="box-s clearfloat">
-						<p class="tit fl">房租</p>
-						<p class="xinxi fr">2500*3</p>
+						<p class="tit fl">租房押金</p>
+						<p class="xinxi fr">¥2500</p>
+					</li>
+					<li class="box-s clearfloat">
+						<p class="tit fl">滞纳金</p>
+						<p class="xinxi fr">¥200</p>
 					</li>
 					<li class="box-s clearfloat">
 						<p class="tit fl">其他费用</p>
-						<p class="xinxi fr">500</p>
+						<p class="xinxi fr">0</p>
 					</li>
-					<li class="box-s clearfloat">
-						<p class="tit fl">平台佣金</p>
-						<p class="xinxi fr">50</p>
-					</li>					
 					<li class="box-s clearfloat" id='showUserPicker'>
 						<p class="tit fl">优惠券</p>
-						<input type="text" name="" id="" value="" placeholder="10元优惠券" readonly="readonly" class="fl day daytwo" />
+						<input type="text" name="" id="" value="" placeholder="暂无可用" readonly="readonly" class="fl day daytwo" />
 						<i class="iconfont icon-arrowright fl"></i>
 					</li>					
 				</ul>
