下单支付、个人信息

--- a/src/main/webapp/html/iscroll.html
+++ b/src/main/webapp/html/iscroll.html
@@ -266,19 +266,19 @@
 			<div class="cation clearfloat">
 				<ul class="clearfloat">
 					<li>
-						<a href="rent-entire.html">
+						<a href="room-entire.html">
 							<img src="../images/fang.png" />
 							<p>整租</p>
 						</a>
 					</li>
 					<li>
-						<a href="rent-entire.html">
+						<a href="room-entire.html">
 							<img src="../images/chuang.png" />
 							<p>合租</p>
 						</a>
 					</li>
 					<li>
-						<a href="rent-entire.html">
+						<a href="room-entire.html">
 							<img src="../images/bao.png" />
 							<p>短租</p>
 						</a>
