--- a/src/main/webapp/html/personal-center.html
+++ b/src/main/webapp/html/personal-center.html
@@ -22,38 +22,38 @@
 		<div class="center-header clearfloat" id="header">
 			<a href="setting.html" class="fr shezhi">设置</a>
 			<div class="top fl clearfloat box-s">
-				<a href="#">
+				<a href="cust-info.html">
 					<div class="tu fl">
 						<span></span>
-						<img src="../images/touxiang.png"/>
+						<img id="image" src="../images/touxiang.png"/>
 					</div>
-					<p class="tit fl">您还没有昵称哦</p>
+					<p class="tit fl" id="nick-name">您还没有昵称哦</p>
 					<i class="iconfont icon-arrowright fr"></i>
 				</a>
 			</div>
 			<div class="bottom clearfloat">
 				<ul>
 					<li>
-						<a href="rent-order.html" class="clearfloat">
-							<p>1</p>
+						<a href="rent-date.html" class="clearfloat">
+							<p id="rent-order-size">--</p>
 							<p>房租订单</p>
 						</a>
 					</li>
 					<li>
-						<a href="rent-order.html" class="clearfloat">
-							<p>1</p>
+						<a href="rent-order.html?tabIndex=1" class="clearfloat">
+							<p id="pay-wait-size">--</p>
 							<p>待付款</p>
 						</a>
 					</li>
 					<li>
-						<a href="empty-list.html" class="clearfloat">
+						<a href="rent-order.html?tabIndex=2" class="clearfloat">
 							<p>0</p>
 							<p>待评价</p>
 						</a>
 					</li>
 					<li>
-						<a href="empty-list.html" class="clearfloat">
-							<p>0</p>
+						<a href="rent-order.html?tabIndex=3" class="clearfloat">
+							<p id="pay-finish-size">--</p>
 							<p>已完成</p>
 						</a>
 					</li>
