--- a/src/main/webapp/html/rent-order.html
+++ b/src/main/webapp/html/rent-order.html
@@ -49,10 +49,10 @@
 				<div class="notice">
 					<div class="tab-hd clearfloat">
 						<ul class="tab-nav clearfloat">
-							<li class="tab-four"><a href="javascript:getDatasList(1);">待付款</a></li>
-							<li class="tab-four"><a href="javascript:getDatasList(2);">待评价</a></li>
-							<li class="tab-four"><a href="javascript:getDatasList(3);">已完成</a></li>
-							<li class="tab-four"><a href="javascript:getDatasList(4);">全部订单</a></li>
+							<li class="tab-four" id="tab-1"><a href="javascript:getDatasList(1);">待付款</a></li>
+							<li class="tab-four" id="tab-2"><a href="javascript:getDatasList(2);">待评价</a></li>
+							<li class="tab-four" id="tab-3"><a href="javascript:getDatasList(3);">已完成</a></li>
+							<li class="tab-four" id="tab-4"><a href="javascript:getDatasList(4);">全部订单</a></li>
 						</ul>
 					</div>
 					<div class="tab-bd clearfloat">
