--- a/src/main/webapp/html/room-entire.html
+++ b/src/main/webapp/html/room-entire.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" type="text/css" href="../js/slick/slick.css"/>
     <script type="text/javascript" src="../js/base/menu.js" ></script>
 	<script type="text/javascript" src="../js/common/util.js"></script>
-    <script type="text/javascript" src="../js/rent-entire.js" ></script>
+    <script type="text/javascript" src="../js/room-entire.js" ></script>
 </head>
 	<body>
 		<div class="headertwo clearfloat" id="header">
-			<a href="javascript:history.go(-1)" class="fl box-s"><i class="iconfont icon-arrow-l fl"></i></a>
+			<a href="index.html" class="fl box-s"><i class="iconfont icon-arrow-l fl"></i></a>
 			<p class="fl">北京</p>
 			<!-- <a href="#" class="fr"><i class="iconfont icon-sousuo fl"></i></a> -->
 		</div>		
