--- a/src/main/webapp/html/room-detail.html
+++ b/src/main/webapp/html/room-detail.html
@@ -25,7 +25,7 @@
 </head>
 	<body>
 		<div class="headertwo clearfloat" id="header">
-			<a href="javascript:history.go(-1)" class="fl box-s"><i class="iconfont icon-arrow-l fl"></i></a>
+			<a href="room-entire.html" class="fl box-s"><i class="iconfont icon-arrow-l fl"></i></a>
 			<p class="fl">房源详情</p>
 			<a href="#" class="fr" onClick="toshare()"><i class="iconfont icon-fenxiang fl"></i></a>
 		</div>
