--- a/src/main/webapp/html/room-entire.html
+++ b/src/main/webapp/html/room-entire.html
@@ -69,8 +69,9 @@
 					<li>
 						<a id="condition-price-href" href="#" class="inactive">租金<i></i></a>
 						<ul id="condition-price" style="display: none">
-							<li><a href="#">100-200元</a></li> 
-							<li><a href="#">300-500元</a></li> 
+							<li><a href="#">不限</a></li>
+							<li><a href="#">100-200元</a></li>
+							<li><a href="#">300-500元</a></li>
 							<li><a href="#">600-800元</a></li> 
 							<li><a href="#">800-1000元</a></li> 
 						</ul>
@@ -78,8 +79,9 @@
 					<li>
 						<a id="condition-sort-href" href="#" class="inactive">排序<i></i></a>
 						<ul id="condition-sort" style="display: none">
-							<li><a href="#">价格</a></li> 
-							<li><a href="#">区域</a></li> 
+							<li><a href="#">默认</a></li>
+							<li><a href="#">价格</a></li>
+							<li><a href="#">区域</a></li>
 						</ul>
 					</li>
 				</ul>
