--- a/src/main/webapp/html/test-deploy.html
+++ b/src/main/webapp/html/test-deploy.html
@@ -44,7 +44,7 @@
 		<div class="assess clearfloat" id="main">
 			<div class="top clearfloat">
 				<i class="iconfont icon-edit-copy edit fl"></i>
-				<textarea name="" rows="4" cols="" class="tarea fr box-s" placeholder="师傅的服务如何，服务周到吗，服务态度好吗，技术过关吗？"></textarea>
+				<textarea name="" rows="4" cols="" class="tarea fr box-s" placeholder="师傅的服务如何，服务周到吗？"></textarea>
 			</div>
 			<div class="bottom clearfloat">
 				<i class="iconfont icon-xiangji"></i>
