--- a/src/main/webapp/html/test-join.html
+++ b/src/main/webapp/html/test-join.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>加盟-悟空源码分享网 www.5kym.com</title>
+    <title>加盟</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <script src="../js/base/rem.js"></script> 
