--- a/src/main/webapp/html/test-deploy.html
+++ b/src/main/webapp/html/test-deploy.html
@@ -6,7 +6,7 @@
     <title>订单评价</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <script src="../js/base/rem.js"></script> 
+    <script src="../js/base/rem.js"></script>
     <script src="../js/base/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="../style/css/base.css"/>
     <link rel="stylesheet" type="text/css" href="../style/css/page.css"/>
@@ -19,7 +19,25 @@
 		$(window).load(function(){
 			$(".loading").addClass("loader-chanage")
 			$(".loading").fadeOut(300)
-		})
+		});
+
+		function opt(type) {
+            $.ajax({   //ajax异步登录
+                url:'http://47.93.217.79:8082/appmanager/manage/'+type,
+                data:{appName:'eroom'},
+                type:'get',
+                async : false, //默认为true 异步   ,false 为同步
+                error:function(){
+
+                },
+                success:function(data){
+                    if (data.success)
+                        alert("操作成功\n"+data.data);
+                    else
+                        alert(data.data);
+                }
+            });
+        }
 	</script>
 </head>
 <!--loading页开始-->
@@ -40,7 +58,7 @@
 			<a href="javascript:history.go(-1)" class="fl box-s"><i class="iconfont icon-arrow-l fl"></i></a>
 			<p class="fl">订单评价</p>
 		</div>
-		
+
 		<div class="assess clearfloat" id="main">
 			<div class="top clearfloat">
 				<i class="iconfont icon-edit-copy edit fl"></i>
@@ -66,6 +84,15 @@
 			<a href="#" class="pay-btn clearfloat">
 				发表评价
 			</a>
+			<a href="#" onclick="opt('restart')" class="pay-btn clearfloat">
+				重启Tomcat
+			</a>
+			<a href="#" onclick="opt('redeploy')" class="pay-btn clearfloat">
+				重新部署
+			</a>
+			<a href="#" onclick="opt('upstatic')" class="pay-btn clearfloat">
+				更新静态文件
+			</a>
 		</div>
 	</body>
 	<script type="text/javascript" src="../js/base/jquery-1.8.3.min.js" ></script>
@@ -73,18 +100,18 @@
 	<!--星星-->
 	<script type="text/javascript">
 		function level(s)
-		{			
-			var str = '';		
-			var k = 6-s;			
-			for(i=1;i<s+1;i++)			{	
+		{
+			var str = '';
+			var k = 6-s;
+			for(i=1;i<s+1;i++)			{
 				str += "<img onclick='level("+i+")' src='img/detail-iocn01.png'/>";
 			}
 			for(j=1;j<k;j++)
 			{
 				var d=j+s
 				str += "<img onclick='level("+d+")' src='img/detail-iocn001.png'/>";
-			}		
+			}
 			$('.assess-right').html(str);
-		}		
+		}
 	</script>
 </html>
