部署页面修改

--- a/src/main/webapp/html/test-deploy.html
+++ b/src/main/webapp/html/test-deploy.html
@@ -56,34 +56,10 @@
 	<body>
 		<div class="headertwo clearfloat" id="header">
 			<a href="javascript:history.go(-1)" class="fl box-s"><i class="iconfont icon-arrow-l fl"></i></a>
-			<p class="fl">订单评价</p>
+			<p class="fl">服务器部署</p>
 		</div>
 
 		<div class="assess clearfloat" id="main">
-			<div class="top clearfloat">
-				<i class="iconfont icon-edit-copy edit fl"></i>
-				<textarea name="" rows="4" cols="" class="tarea fr box-s" placeholder="师傅的服务如何，服务周到吗？"></textarea>
-			</div>
-			<div class="bottom clearfloat">
-				<i class="iconfont icon-xiangji"></i>
-			</div>
-			<div class="stars clearfloat box-s">
-				<ul>
-					<li>
-						服务评价
-					</li>
-					<li class="assess-right">
-						<img onclick="level(1)" src="../images/detail-iocn001.png"/>
-						<img onclick="level(2)" src="../images/detail-iocn001.png"/>
-						<img onclick="level(3)" src="../images/detail-iocn001.png"/>
-						<img onclick="level(4)" src="../images/detail-iocn001.png"/>
-						<img onclick="level(5)" src="../images/detail-iocn001.png"/>
-					</li>
-				</ul>
-			</div>
-			<a href="#" class="pay-btn clearfloat">
-				发表评价
-			</a>
 			<a href="#" onclick="opt('restart')" class="pay-btn clearfloat">
 				重启Tomcat
 			</a>
