个人信息修改

--- a/src/main/webapp/html/cust-info.html
+++ b/src/main/webapp/html/cust-info.html
@@ -80,7 +80,7 @@
 						<input type="text" name="wechat" id="wechat" value="" placeholder="您的微信" class="fl" />
 					</li>
 				</ul>
-				<a href="#loginmodal" id="modaltrigger">
+				<a href="javascript:updateDatas();" id="modaltrigger">
 					<input type="button" id="submit" value="提交" class="btn" />
 				</a>
 			</div>
